--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "my-app",
+  "homepage":"https://sameasychen.github.io/Project-UserFunction",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,7 +8,8 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "deploy":"gh-pages -d build"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -29,5 +31,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
